Mon Mar 12 23:20:15 2001  Lee Mallabone <lee0@callnetuk.com>

	* gui/gdmconfig.c: Use a notebook instead of doing the container
	  voodoo. This should sort out the widget packing.

Fri Mar 09 21:00:03 2001  Lee Mallabone <lee0@callnetuk.com>

	* gui/gdmconfig.glade: Be slightly nicer to people with fonts
	  that aren't pretty small.

2001-03-12  Christian Rose  <menthos@menthos.com>

	* gui/gdmconfig.desktop: Added Swedish strings.

Sun Mar 11 20:23:55 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: follow the xinerama screen size/position for
	  the icon as well.

Sat Mar 10 19:36:18 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: remove the clear message before first prompt hack,
	  and make it, clear after first return hack.  Also add a hack to
	  accumulate pam messages rather then replacing them in between
	  queries.  This fixes the weird clearing bugs with respect to
	  say expiring passwords.  Also clear message on GDM_RESET

Thu Mar 08 21:00:03 2001  Lee Mallabone <lee0@callnetuk.com>

	* gui/gdmconfig.c: Change (lack of) help message.

	* gui/gdmconfig.glade: Set the initial height to be more
	  representative of what it's like when the containers have been
	  packed. Also do a little bit of container voodoo so the main panels
	  are in a viewport, (makes gdmconfig more usable on small screens).

Thu Mar 08 00:37:12 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in: Fixups, move the security dir as well and
	  hardwire the sysconfdir to /etc as that seems broke on my 6.2 box
	  otherwise

	* configure.in: raise version to 2.2.0, no there isn't a release yet,
	  this is just to start rumors of an upcoming one.  (Plus I wanted
	  to build myself an rpm for my own use, cuz I'm not 'l33t 'nuff
	  to build on my system from cvs directly)

Wed Mar 07 22:50:06 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in: minor fixups from the merge

2001-03-07  Gregory Leblanc <gleblanc@cu-portland.edu>
